Quản lý nhân viên - có account- sử dụng I/O streams - Kết nối account, cấp quyền sử dụng chức năng